# PSXFunkin-n00b

./: .gitignore  CMakeLists.txt  COMPILE.md  README.md  funkin.xml
flas/: DAD.FLA  RECOVER_DAD.FLA
iso/DAD/: Animation.json  spritemap1.json  spritemap2.json
src/: Hash.h  HashMap.h  Main.cpp  Main.h  MainLoop.cpp  MainLoop.h  Public.h  Saxman.h  Types.h
src/Backend/: CD.cpp  CD.h  DLL.cpp  DLL.h  Data.cpp  Data.h  GPU.cpp  GPU.h  Timer.cpp  Timer.h
src/Menu/: Menu.cpp  Menu.h
src/Stage/: Stage.h
src/Week1/: Week1.cpp  Week1.h
tools/: CMakeLists.txt
tools/generatemap/: generatemap.cpp
